// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`M20230816 > Projects > should do nothing 1`] = `
[
  {
    "key": "test-project-1",
    "value": {
      "layerIds": [
        "layer-id-1",
        "layer-id-2",
        "layer-id-3",
      ],
      "layouts": {
        "abcMapAttributionsEnabled": true,
        "layoutIds": [
          "layout-id-1",
          "layout-id-2",
          "layout-id-3",
        ],
      },
      "metadata": {
        "id": "test-project-1",
        "name": "Test project 1",
        "public": false,
        "version": "1.3.0",
      },
      "sharedViews": {
        "fullscreen": false,
        "mapDimensions": {
          "height": 600,
          "width": 800,
        },
        "viewIds": [
          "shared-view-id-1",
          "shared-view-id-2",
          "shared-view-id-3",
        ],
      },
      "version": 99,
      "view": {
        "center": [
          1,
          2,
        ],
        "projection": {
          "name": "EPSG:3857",
        },
        "resolution": 1000,
        "rotation": 0,
      },
    },
  },
]
`;

exports[`M20230816 > Projects > should migrate 1`] = `
[
  {
    "key": "test-project-1",
    "value": {
      "layerIds": [
        "layer-id-1",
        "layer-id-2",
        "layer-id-3",
      ],
      "layouts": undefined,
      "metadata": {
        "id": "test-project-1",
        "name": "Test project 1",
        "public": false,
        "version": "1.3.0",
      },
      "sharedViews": {
        "fullscreen": false,
        "mapDimensions": {
          "height": 600,
          "width": 800,
        },
        "viewIds": [
          "shared-view-id-1",
          "shared-view-id-2",
          "shared-view-id-3",
        ],
      },
      "version": 3,
      "view": {
        "center": [
          1,
          2,
        ],
        "projection": {
          "name": "EPSG:3857",
        },
        "resolution": 1000,
        "rotation": 0,
      },
    },
  },
]
`;
